# voyager

./: .gitignore  Cargo.toml  Cross.toml  README.md  justfile
.github/workflows/: firmware.yml  workspace.yml
bootloader/: update-nice_nano_bootloader-0.9.0_nosd.uf2
firmware/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
firmware/src/: battery.rs  ble.rs  display.rs  erase_sd_s140v6_1_1.rs  erase_sd_s140v7_3_0.rs  fmt.rs  icd.rs  leds.rs  log_usb.rs  main.rs  resources.rs  usb_logger.rs
firmwares/: erase-sd-s140-v6.1.1.uf2  erase-sd-s140-v7.3.0.uf2
font-generator/: Cargo.toml  README.md
font-generator/examples/: build_rs_example.rs  display.rs
font-generator/src/: lib.rs  main.rs
font-viewer/: Cargo.toml  README.md
font-viewer/src/: main.rs
greeting-renderer/: Cargo.toml  greetings.txt
greeting-renderer/src/: main.rs
nrf-dfu/: Cargo.toml
nrf-dfu/src/: elf.rs  lib.rs  protocol.rs  slip.rs
prebuilt/: nice_nano_bootloader-0.9.0_nosd.hex  voyager-host-aarch64
shared-icd/: Cargo.toml
shared-icd/src/: lib.rs
src/: main.rs
tools/: pyproject.toml  reboot_to_dfu.py  set_time.py
voyager-cli/: Cargo.toml
voyager-cli/src/: main.rs
voyager-cli/src/transport/: ble.rs  mod.rs
voyager-display/: Cargo.toml  README.md
voyager-display/src/: lib.rs
voyager-host/: Cargo.toml  voyager-host.service
voyager-host/src/: main.rs
