[workspace]
resolver = "2"
members = [
    "font-viewer",
    "voyager-display",
    "greeting-renderer", "voyager-host",
]
exclude = [
    "firmware",  # Different toolchain (thumbv7em-none-eabihf)
]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
