[package]
edition = "2024"
name = "voyager"
version = "0.1.0"

[dependencies]
voyager-icd = { path = "../shared-icd", optional = true }
voyager-display = { path = "../voyager-display" }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.9.0", features = ["nrf52840", "gpiote", "time-driver-rtc1", "unstable-pac", "rt"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }
embedded-graphics = "0.8.1"
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
ssd1306 = { version = "0.10.0", features = ["async", "graphics"], default-features = false }
static_cell = "2.1.1"
portable-atomic = { version = "1.10", features = ["critical-section"] }
heapless = "0.9"

# BLE dependencies (optional)
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", default-features = false, features = ["peripheral", "nrf52840"], optional = true }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", default-features = false, features = ["critical-section-impl", "nrf52840"], optional = true }
bt-hci = { version = "0.7", default-features = false, optional = true }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", default-features = false, features = ["peripheral", "gatt", "derive", "default-packet-pool"], optional = true }
rand = { version = "0.8", default-features = false, optional = true }
rand_core = { version = "0.9", optional = true }
futures = { version = "0.3", default-features = false, features = ["async-await"], optional = true }

# USB dependencies (optional)
embassy-usb = { version = "0.5", optional = true }

# Ergot dependencies (needed for USB or BLE)
ergot = { path = "/home/okhsunrog/code/rust/ergot/crates/ergot", default-features = false, optional = true }
embedded-io-async-0_6 = { version = "0.6", package = "embedded-io-async", optional = true }
mutex = { version = "1.0", features = ["impl-unsafe-cortex-m-single-core"], optional = true }
log = { version = "0.4.29", optional = true }
rtt-target = { version = "0.6.2", optional = true }

[[bin]]
name = "voyager"
test = false
bench = false

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug", "usb", "ble"]

# USB support with ergot
usb = [
    "dep:embassy-usb",
    "dep:ergot",
    "dep:mutex",
    "dep:voyager-icd",
    "ergot/embassy-usb-v0_5",
]

# For builds without BLE: provides critical-section impl from cortex-m
# Don't enable this with 'ble' feature - nrf-mpsl provides its own
cortex-m-cs = ["cortex-m/critical-section-single-core"]

# BLE support with ergot over NUS
ble = [
    "dep:nrf-sdc",
    "dep:nrf-mpsl",
    "dep:bt-hci",
    "dep:trouble-host",
    "dep:rand",
    "dep:rand_core",
    "dep:futures",
    "dep:ergot",
    "dep:embedded-io-async-0_6",
    "dep:mutex",
    "dep:voyager-icd",
    "ergot/embedded-io-async-v0_6",
]

debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-nrf/defmt",
    "nrf-sdc?/defmt",
    "nrf-mpsl?/defmt",
    "bt-hci?/defmt",
    "trouble-host?/defmt",
    "embassy-usb?/defmt",
    "ergot?/defmt-v1",
]
# Log-based debugging via RTT (alternative to defmt, needs debug probe)
log-rtt = [
    "dep:log",
    "dep:rtt-target",
    "rtt-target/log",
    "embassy-executor/log",
    "embassy-sync/log",
    "embassy-futures/log",
    "embassy-time/log",
    "embassy-nrf/log",
    "nrf-sdc?/log",
    "nrf-mpsl?/log",
    "bt-hci?/log",
    "trouble-host?/log",
    "embassy-usb?/log",
]

# Log via ergot over USB (no debug probe needed)
log-usb = [
    "usb",
    "dep:log",
    "embassy-executor/log",
    "embassy-sync/log",
    "embassy-futures/log",
    "embassy-time/log",
    "embassy-nrf/log",
    "embassy-usb/log",
]

[profile.dev]
debug = true
lto = true
opt-level = "z"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git" }
ergot = { path = "/home/okhsunrog/code/rust/ergot/crates/ergot" }
