[package]
edition = "2024"
name = "voyager"
version = "0.1.0"

[dependencies]
voyager-display = { path = "../voyager-display" }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.9.0", features = ["nrf52840", "gpiote", "time-driver-rtc1"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }
embedded-graphics = "0.8.1"
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
portable-atomic = { version = "1.10", features = ["critical-section"] }
ssd1306 = { version = "0.10.0", features = ["async", "graphics"], default-features = false }
static_cell = "2.1.1"

[[bin]]
name = "voyager"
test = false
bench = false

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]

debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-nrf/defmt",
]

[profile.dev]
debug = true
lto = true
opt-level = "z"

[profile.release]
debug = 2
lto = true
opt-level = "z"


