[package]
edition = "2024"
name = "voyager"
version = "0.1.0"

[[bin]]
name = "voyager"
test = false
bench = false

[[bin]]
name = "erase-sd-s140v6_1_1"
path = "src/erase_sd_s140v6_1_1.rs"
test = false
bench = false

[[bin]]
name = "erase-sd-s140v7_3_0"
path = "src/erase_sd_s140v7_3_0.rs"
test = false
bench = false

[dependencies]
voyager-display = { path = "../voyager-display" }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.5", features = ["set-vtor"] }

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "log"] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.9", features = ["log", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-sync = { version = "0.7", features = ["log"] }
embassy-time = { version = "0.5", features = ["log"] }
embassy-usb = { version = "0.5", features = ["log"] }

nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "df7e3b4f363275e2c9ad42005758cf3eb8a798e0", default-features = false, features = ["nrf52840", "peripheral"] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "df7e3b4f363275e2c9ad42005758cf3eb8a798e0", default-features = false, features = ["critical-section-impl"] }
trouble-host = { version = "0.6.0", features = ["derive", "gatt", "peripheral", "log"] }
bt-hci = { version = "0.8.0", default-features = false, features = ["log"] }

embedded-graphics = "0.8.1"
ssd1306 = { version = "0.10.0", features = ["async", "graphics"], default-features = false }

log = "0.4"
panic-halt = "1.0.0"
rand = { version = "0.8", default-features = false }
heapless = "0.9"
static_cell = "2.1.1"
portable-atomic = { version = "1.10", features = ["critical-section"] }

[profile.dev]
debug = true
lto = true
opt-level = "z"

[profile.release]
debug = 2
lto = true
opt-level = "z"
