[package]
name = "greeting-renderer"
version = "0.1.0"
edition = "2024"
description = "Pre-renders greetings to bitmap for embedded display"

[dependencies]
bmp-monochrome = "1.1.0"
clap = { version = "4.5.55", features = ["derive"] }
fontique = "0.7.0"
parley = "0.7.0"
skrifa = "0.40.0"
tiny-skia = "0.11.4"
