[package]
name = "voyager-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
voyager-icd = { path = "../shared-icd" }
ergot = { version = "0.12", features = ["nusb-v0_1", "tokio-serial-v5"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
mutex = { version = "1.0", features = ["std"] }
tokio-serial = "5.4.5"
object = "0.38.1"
nrf-dfu = { version = "0.1.0", path = "../nrf-dfu" }
bluer = { version = "0.17.4", features = ["bluetoothd"] }
uuid = { version = "1.19.0", features = ["v4"] }
cobs-acc = { version = "0.1", features = ["std"] }
futures = "0.3.31"
thiserror = "2.0.17"
